# machine-learning-zoom-camp

./: README.md  main.py  pyproject.toml  requirements.txt
02-regression/: homework.ipynb
03-classification/: 03_homework.ipynb
04-evaluation_metrics/: 04_homework.ipynb
05-model-deployment/: Dockerfile  app.py  app_docker.py  predict.py  pyproject.toml  test.py
06-tree/: 06_homework.ipynb
08-nn-deep-learning/: 08_homework.ipynb
scripts/: setup.sh
